[tool.poetry]
name = "reloadm"
version = "0.1.0"
description = ""
authors = ["sudomaze <sudomaze@gmail.com>"]
license = "MIT"
readme = 'README.md'
homepage = "https://github.com/sudomaze/reloadm"
repository = "https://github.com/sudomaze/reloadm"

[tool.poetry.dependencies]
python = "3.7.13"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
pytest = "^7.1.1"
black = "^22.3.0"
mypy = "^0.961"
pre-commit = "^2.19.0"
isort = "^5.10.1"
pre-commit-hooks = "^4.3.0"
mkdocs = "^1.3.0"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}
mkdocs-material = "^8.3.9"
pycln = "^2.0.1"
ipykernel = "^6.15.1"

[tool.mypy]
files = ["^reloadm/"]
pretty = true
strict = true
# show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
# ignore_missing_imports = true
exclude = "(/tests/)|(/docs/)|(/examples/)"

[tool.pytest]
# log_cli = true
addopts = [
    # show summary of all tests that did not pass
    "-ra",
    # idk
    "-s",
    # Make tracebacks shorter
    "--tb=native",
    # enable all warnings
    "-Wd",
]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.isort]
profile = "black"
line_length = 79

[tool.black]
line-length = 79 # override the default of 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
